                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 23-08-2005 fixed: Volumeslider in video OSD.
 - 23-08-2005 added: visualisation.enabled tag to be used in skin conditional visible tags, enabled means a visualisation has been set in settings.
 - 23-08-2005 fixed: In some occasions controls would still be visible even when conditional visible tag would set it to invisible.
 - 23-08-2005 added: zip/rar support in webserver.
 - 23-08-2005 fixed: dvdplayer would crash if any audio other than AC3 or DTS was available when opening audio osd.
 - 22-08-2005 fixed: graphiccontext was being locked unneccisarily in application thread, caused a minor slowdown
 - 22-08-2005 changed: Ignore "The " while sorting only affects database views, not file views.
 - 22-08-2005 fixed: FLAC tags broken
 - 22-08-2005 fixed: now less fast forward then slowdown after seek, and vts change in dvdplayer
 - 22-08-2005 fixed: dvdplayer, old subtitles were not removed, this resulted in high memory usage and crashes.
 - 22-08-2005 fixed: dvdplayer, some dvds displayed to many audio / subtitle streams in osd.
 - 22-08-2005 fixed: dvdplayer, sometimes menu overlays were removed during menu navigation.
 - 22-08-2005 changed: percentage seeking now seeks using relative time from current position. (fixes seeking in some mkv's)
 - 22-08-2005 updated: mplayer.dll (fixes ogg in mkv's and ogm's)
 - 22-08-2005 fixed: graphic context, view port could be out of screen bound
 - 22-08-2005 changed: startup sound is not played if nav sounds are turned off 
 - 22-08-2005 added: file manager, calculate folder size for multiple selected items
 - 22-08-2005 updated: Italian language file (Thnx to kotix)